--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,6 +13,8 @@
 @import "blocks/footer.scss";
 @import "blocks/social.scss";
 @import "blocks/copyright.scss";
+@import "blocks/title.scss";
+@import "blocks/catalog.scss";
 
 @font-face {
   font-family: "Oswald";
