--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -54,7 +54,7 @@
 
 .catalog__caption {
   max-width: 100px;
-  margin-top: 0px;
+  margin-top: 0;
   margin-bottom: 10px;
 
   font-family: $font-stack;
@@ -136,4 +136,3 @@
   text-align: center;
   color: $txt-color-arial;
 }
-
