--- a/source/sass/blocks/cover.scss
+++ b/source/sass/blocks/cover.scss
@@ -13,7 +13,7 @@
     height: 305px;
     z-index: -10;
 
-    background: top rgba(99, 167, 58, 1) url(../../img/index-background-mobile@1x.jpg) no-repeat;
+    background: top rgba(99, 167, 58, 1) url("../img/index-background-mobile@1x.jpg") no-repeat;
     background-size: 320px 305px;
   }
 }
