--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -45,7 +45,7 @@
     width: 60px;
     height: 60px;
     margin-right: 20px;
-    background: center $button-color url(../../img/advantage-leaf@1x.png) no-repeat;
+    background: center $button-color url("../img/advantage-leaf@1x.png") no-repeat;
   }
 
   &--formula::before {
@@ -54,7 +54,7 @@
     width: 60px;
     height: 60px;
     margin-right: 20px;
-    background: center $button-color url(../../img/advantage-powder@1x.png) no-repeat;
+    background: center $button-color url("../img/advantage-powder@1x.png") no-repeat;
   }
 
   &--precept::before {
@@ -63,7 +63,7 @@
     width: 60px;
     height: 60px;
     margin-right: 20px;
-    background: center $button-color url(../../img/advantage-dining@1x.png) no-repeat;
+    background: center $button-color url("../img/advantage-dining@1x.png") no-repeat;
   }
 
   &--result::before {
@@ -72,7 +72,7 @@
     width: 60px;
     height: 60px;
     margin-right: 20px;
-    background: center $button-color url(../../img/advantage-clock@1x.png) no-repeat;
+    background: center $button-color url("../img/advantage-clock@1x.png") no-repeat;
   }
 }
 
