--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,31 +1,16 @@
 @import "normalize.scss";
 @import "variables.scss";
-@import "blocks/header.scss";
-@import "blocks/nav.scss";
-@import "blocks/site-list.scss";
-@import "blocks/main.scss";
-@import "blocks/cover.scss";
-@import "blocks/button.scss";
-@import "blocks/programs.scss";
-@import "blocks/faq.scss";
-@import "blocks/example.scss";
-@import "blocks/address.scss";
-@import "blocks/footer.scss";
-@import "blocks/social.scss";
-@import "blocks/copyright.scss";
-@import "blocks/title.scss";
-@import "blocks/catalog.scss";
 
 @font-face {
   font-family: "Oswald";
-  src: url("../fonts/ptsans_regular/oswaldregular.woff") format("woff"), url("../fonts/ptsans_regular/oswaldregular.woff2") format("woff2");
+  src: url("../fonts/oswaldregular.woff2") format("woff2"), url("../fonts/oswaldregular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Oswald";
-  src: url("../fonts/ptsans_bold/oswaldmedium.woff") format("woff"), url("../fonts/ptsans_bold/oswaldmedium.woff2") format("woff2");
+  src: url("../fonts/oswaldmedium.woff2") format("woff2"), url("../fonts/oswaldmedium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
 }
@@ -50,4 +35,18 @@ a {
   text-decoration: none;
 }
 
-
+@import "blocks/header.scss";
+@import "blocks/nav.scss";
+@import "blocks/site-list.scss";
+@import "blocks/main.scss";
+@import "blocks/cover.scss";
+@import "blocks/button.scss";
+@import "blocks/programs.scss";
+@import "blocks/faq.scss";
+@import "blocks/example.scss";
+@import "blocks/address.scss";
+@import "blocks/footer.scss";
+@import "blocks/social.scss";
+@import "blocks/copyright.scss";
+@import "blocks/title.scss";
+@import "blocks/catalog.scss";
