--- a/source/sass/normalize.scss
+++ b/source/sass/normalize.scss
@@ -1,3 +1,4 @@
+// @import (css) "normalize"
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
@@ -10,7 +11,7 @@
 
 html {
   line-height: 1.15; /* 1 */
-  text-size-adjust: 100%; /* 2 */ /*-webkit-*/
+  -webkit-text-size-adjust: 100%; /* 2 */ /**/
 }
 
 /* Sections
@@ -62,7 +63,7 @@ hr {
  */
 
 pre {
-  font-family: monospace; /* 1 */ /*monospace,*/
+  font-family: monospace, monospace; /* 1 */ /*monospace,*/
   font-size: 1em; /* 2 */
 }
 
@@ -84,7 +85,7 @@ a {
 
 abbr[title] {
   border-bottom: none; /* 1 */
-  // text-decoration: underline; /* 2 */
+  text-decoration: underline; /* 2 */
   text-decoration: underline dotted; /* 2 */
 }
 
@@ -105,7 +106,7 @@ strong {
 code,
 kbd,
 samp {
-  font-family: monospace; /* 1 */ /*monospace, */
+  font-family: monospace, monospace; /* 1 */ /*monospace, */
   font-size: 1em; /* 2 */
 }
 
@@ -196,7 +197,7 @@ button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
-  appearance: button; /*-webkit-*/
+  -webkit-appearance: button; /*-webkit-*/
 }
 
 /**
@@ -288,7 +289,7 @@ textarea {
  */
 
 [type="search"] {
-  appearance: textfield; /* 1 */ /*-webkit-*/
+  -webkit-appearance: textfield; /* 1 */ /*-webkit-*/
   outline-offset: -2px; /* 2 */
 }
 
@@ -297,7 +298,7 @@ textarea {
  */
 
 [type="search"]::-webkit-search-decoration {
-  appearance: none; /*-webkit-*/
+  -webkit-appearance: none; /*-webkit-*/
 }
 
 /**
@@ -306,7 +307,7 @@ textarea {
  */
 
 ::-webkit-file-upload-button {
-  appearance: button; /* 1 */ /*-webkit-*/
+  -webkit-appearance: button; /* 1 */ /*-webkit-*/
   font: inherit; /* 2 */
 }
 
