--- a/source/sass/blocks/address.scss
+++ b/source/sass/blocks/address.scss
@@ -1,10 +1,19 @@
 .address {
+  // display: flex;
+  // justify-content: space-between;
+  // flex-wrap: wrap;
+  // align-items: center;
+
+  margin-top: 25px;
+}
+
+.address__container {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   align-items: center;
 
-  margin-top: 25px;
+  width: 100%;
 }
 
 .address__title {
@@ -12,8 +21,7 @@
   width: 140px;
   margin: 0;
   margin-left: 20px;
-  padding: 0;
-  // padding-left: 20px;
+  // padding: 0;
 
   font-size: 16px;
   line-height: 20px;
@@ -26,8 +34,7 @@
   width: 140px;
   margin: 0;
   margin-right: 20px;
-  padding: 0;
-  // padding-right: 20px;
+  // padding: 0;
 
   font-family: "Arial", sans-serif;
   font-size: 14px;
@@ -40,4 +47,89 @@
   width: 100%;
   height: 365px;
   margin-top: 27px;
+}
+
+@media (max-width: 767px) {
+  .address__description br {
+    display: none;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .address {
+    margin-top: 62px;
+  }
+
+  .address__title {
+    width: 160px;
+    margin-left: 70px;
+
+    font-size: 20px;
+    line-height: 25px;
+  }
+
+  .address__description {
+    width: 160px;
+    margin-right: 70px;
+
+    font-size: 16px;
+    line-height: 20px;
+    text-align: end;
+  }
+
+  .address__map {
+    height: 400px;
+    margin-top: 59px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .address {
+    position: relative;
+
+    margin-top: 0;
+  }
+
+  .address__container {
+    position: absolute;
+    justify-content: space-between;
+
+    top: 97px;
+    // left: 110px;
+    // left: 7.6%;
+    left: calc((100% - 1220px) / 2);
+    box-sizing: border-box;
+    width: 570px;
+
+    padding: 63px 0;
+
+    // display: flex;
+    // justify-content: space-between;
+    // flex-wrap: wrap;
+    // align-items: center;
+    // background-color: red;
+    background-color: $txt-color-alt;
+  }
+
+  .address__title {
+    // margin: 65px 0;
+    // width: 160px;
+    margin-left: 75px;
+
+    // font-size: 20px;
+    // line-height: 25px;
+  }
+
+  .address__description {
+    // width: 160px;
+    margin-right: 83px;
+
+    // font-size: 16px;
+    // line-height: 20px;
+    text-align: start;
+  }
+
+  .address__map {
+    margin-top: 0;
+  }
 }
