--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -13,7 +13,6 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  // justify-content: space-between;
 
   padding: 0 20px;
   padding-bottom: 24px;
@@ -21,8 +20,6 @@
 }
 
 .catalog__link-img {
-  // flex-grow: 1;
-
   box-sizing: border-box;
   width: 40%;
   margin: 0 5%;
@@ -40,8 +37,6 @@
 }
 
 .catalog__table {
-  // flex-grow: 1;
-
   width: 50%;
   border-collapse: collapse;
 
@@ -124,6 +119,7 @@
 
 .catalog__text {
   width: 100%;
+  width: auto;
   margin: 0;
   margin-top: 9px;
   margin-bottom: 20px;
@@ -135,4 +131,29 @@
   text-transform: none;
   text-align: center;
   color: $txt-color-arial;
+}
+
+@media (min-width: $tablet-width) {
+  .catalog__list {
+    display: flex;
+    flex-wrap: wrap;
+    // margin: 0;
+    // padding: 0;
+
+    // list-style: none;
+  }
+
+  .catalog__item {
+    // display: flex;
+    // flex-direction: column;
+    // flex-wrap: nowrap;
+    // align-items: center;
+
+    box-sizing: border-box;
+    // width: 50%;
+
+    padding: 0 30px;
+    padding-bottom: 24px;
+    // border-bottom: 1px solid #ededed;
+  }
 }
