--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -96,3 +96,18 @@
   height: 365px;
 }
 
+@media (min-width: $tablet-width) {
+  .example {
+    min-height: 1078px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .example {
+    min-height: 615px;
+  }
+
+  .example__visually {
+    height: 100px;
+  }
+}
