--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,11 +1,14 @@
 .footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
   padding: 0 20px;
 
   background-color: $block-backgr-color;
+}
+
+.footer__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
 .footer__logo {
@@ -30,4 +33,47 @@
 .footer__copyright {
   width: 100%;
   margin: 0;
+}
+
+@media (min-width: $tablet-width) {
+  .footer {
+    padding: 32px 30px;
+    padding-bottom: 36px;
+  }
+
+  .footer__container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .footer__logo {
+    margin-top: 0;
+  }
+
+  .footer__social {
+    margin-top: 0;
+    margin-left: 18px;
+
+    border-top: none;
+    border-bottom: none;
+  }
+
+  .footer__copyright {
+    width: 163px;
+    margin: 0;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .footer {
+    padding: 37px 40px;
+    padding-bottom: 35px;
+  }
+
+  .footer__container {
+    width: 1220px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
