--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -34,6 +34,8 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
+  width: 140px;
+  height: auto;
 }
 
 .catalog__table {
@@ -119,7 +121,6 @@
 
 .catalog__text {
   width: 100%;
-  width: auto;
   margin: 0;
   margin-top: 9px;
   margin-bottom: 20px;
@@ -137,7 +138,7 @@
   .catalog__list {
     display: flex;
     flex-wrap: wrap;
-    // margin: 0;
+    // margin: 0 30px;
     // padding: 0;
 
     // list-style: none;
@@ -145,15 +146,103 @@
 
   .catalog__item {
     // display: flex;
-    // flex-direction: column;
+    flex-direction: column;
     // flex-wrap: nowrap;
     // align-items: center;
 
     box-sizing: border-box;
-    // width: 50%;
+    width: 50%;
 
-    padding: 0 30px;
-    padding-bottom: 24px;
-    // border-bottom: 1px solid #ededed;
+    margin-bottom: 19px;
+    padding: 0 37px;
+    // padding: 0;
+    padding-bottom: 40px;
+
+    background: linear-gradient(
+      to bottom,
+      white 0,
+      white 50%,
+      $block-backgr-color 50%, /* 140px*/
+      $block-backgr-color 100%
+    );
+    border-bottom: none;
+    border-left: 30px solid white;
+    border-right: 30px solid white;
   }
+
+  .catalog__link-img {
+    // display: block;
+    // box-sizing: border-box;
+    width: 100%;
+    margin: 0;
+    // overflow: hidden;
+  }
+
+  .catalog__img {
+    // display: block;
+    // margin-left: -37px;
+    // margin-right: auto;
+    width: 324px;
+    height: 208px; /*174 for small*/
+
+    // object-position: -37px;
+  }
+
+  .catalog__table {
+    width: 100%;
+    margin-top: 75px;
+    margin-bottom: 35px;
+  //   border-collapse: collapse;
+
+  //   font-family: "Arial", sans-serif;
+    font-size: 16px;
+  //   line-height: 16px;
+  //   font-weight: normal;
+  //   color: $txt-color-arial;
+  }
+
+  .catalog__caption {
+    max-width: 135px;
+  //   margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 21px;
+
+  //   font-family: $font-stack;
+    font-size: 20px;
+  //   line-height: 20px;
+  //   font-weight: normal;
+  //   text-transform: uppercase;
+    text-align: center;
+  }
+
+  // .catalog__link-txt {
+  //   color: $primary-color;
+  //   cursor: pointer;
+
+  //   &:hover {
+  //     opacity: $opacity-txt-hover;
+  //   }
+
+  //   &:active {
+  //     opacity: $opacity-txt-down;
+  //   }
+  // }
+
+  .catalog__data {
+  //   text-align: left;
+    padding: 7px 0;
+    border-bottom: 1px solid #cdcdcd;
+  }
+
+  .catalog__value {
+    // text-align: right;
+    padding: 7px 0;
+    border-bottom: 1px solid #cdcdcd;
+  }
+
+  // .catalog__btn {
+  //   width: 100%;
+  //   // margin: 0 37px;
+  // }
 }
