--- a/source/sass/blocks/title.scss
+++ b/source/sass/blocks/title.scss
@@ -10,3 +10,16 @@
   line-height: 60px;
   font-weight: normal;
 }
+
+@media (min-width: $tablet-width) {
+  .title {
+    margin-top: 45px;
+    padding: 0 30px;
+    padding-bottom: 45px;
+
+    border-bottom: none;
+
+    font-size: 60px;
+    line-height: 60px;
+  }
+}
