--- a/source/sass/normalize.scss
+++ b/source/sass/normalize.scss
@@ -1,4 +1,4 @@
-/* stylelint-diseble */
+/* stylelint-disable */
 // @import (css) "normalize"
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
