--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -138,111 +138,129 @@
   .catalog__list {
     display: flex;
     flex-wrap: wrap;
-    // margin: 0 30px;
-    // padding: 0;
-
-    // list-style: none;
   }
 
   .catalog__item {
-    // display: flex;
     flex-direction: column;
-    // flex-wrap: nowrap;
-    // align-items: center;
 
     box-sizing: border-box;
     width: 50%;
 
+    margin-top: 120px;
     margin-bottom: 19px;
     padding: 0 37px;
-    // padding: 0;
     padding-bottom: 40px;
 
-    background: linear-gradient(
-      to bottom,
-      white 0,
-      white 50%,
-      $block-backgr-color 50%, /* 140px*/
-      $block-backgr-color 100%
-    );
+    background: $block-backgr-color;
+
     border-bottom: none;
     border-left: 30px solid white;
     border-right: 30px solid white;
   }
 
+  .catalog__item--add {
+    width: 50%;
+
+    background: white;
+    box-shadow: inset 0 0 0 1px $block-backgr-color;
+
+    border-left: 30px solid white;
+    border-right: 30px solid white;
+  }
+
   .catalog__link-img {
-    // display: block;
-    // box-sizing: border-box;
-    width: 100%;
-    margin: 0;
-    // overflow: hidden;
+    width: auto;
+    margin: -120px -50px 0;
   }
 
   .catalog__img {
-    // display: block;
-    // margin-left: -37px;
-    // margin-right: auto;
     width: 324px;
     height: 208px; /*174 for small*/
-
-    // object-position: -37px;
   }
 
   .catalog__table {
     width: 100%;
     margin-top: 75px;
     margin-bottom: 35px;
-  //   border-collapse: collapse;
 
-  //   font-family: "Arial", sans-serif;
     font-size: 16px;
-  //   line-height: 16px;
-  //   font-weight: normal;
-  //   color: $txt-color-arial;
   }
 
   .catalog__caption {
     max-width: 135px;
-  //   margin-top: 0;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 21px;
 
-  //   font-family: $font-stack;
     font-size: 20px;
-  //   line-height: 20px;
-  //   font-weight: normal;
-  //   text-transform: uppercase;
     text-align: center;
   }
 
-  // .catalog__link-txt {
-  //   color: $primary-color;
-  //   cursor: pointer;
-
-  //   &:hover {
-  //     opacity: $opacity-txt-hover;
-  //   }
-
-  //   &:active {
-  //     opacity: $opacity-txt-down;
-  //   }
-  // }
-
   .catalog__data {
-  //   text-align: left;
     padding: 7px 0;
     border-bottom: 1px solid #cdcdcd;
   }
 
   .catalog__value {
-    // text-align: right;
     padding: 7px 0;
     border-bottom: 1px solid #cdcdcd;
   }
 
-  // .catalog__btn {
-  //   width: 100%;
-  //   // margin: 0 37px;
-  // }
+  .catalog__par {
+    width: 60%;
+    min-height: 40px;
+    padding-top: 164px;
+
+    font-size: 20px;
+
+    &::before,
+    &::after {
+      content: "";
+      width: 60px;
+      top: 84px;
+    }
+  }
+
+  .catalog__text {
+    width: 70%;
+    min-height: 40px;
+    margin-top: 25px;
+    margin-bottom: 83px;
+
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .catalog {
+    width: 1300px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .catalog__item {
+    box-sizing: border-box;
+    width: 325px;
+
+    margin-top: 121px;
+    padding: 0 38px;
+    padding-bottom: 40px;
+
+    border-left: 40px solid white;
+    border-right: 40px solid white;
+  }
+
+  .catalog__img {
+    width: 245px;
+    // height: 208px; /*174 for small*/
+  }
+
+  .catalog__par {
+    width: auto;
+  }
+
+  .catalog__text {
+    width: auto;
+  }
 }
