--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -8,17 +8,18 @@
   width: 100%;
   // width: auto;
   padding: 22px 0;
+  padding-bottom: 21px;
 
   font-size: 0;
 }
 
 .social__item {
-  margin: 0 17px;
+  margin: 0 15px;
 }
 
 .social__link {
   display: block;
-  width: 25px;
+  width: 24px;
 
   cursor: pointer;
 
