--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -25,6 +25,14 @@
 
   cursor: pointer;
 
+  &:hover:not(.header__logo--active) {
+    opacity: $opacity-txt-hover;
+  }
+
+  &:active:not(.header__logo--active) {
+    opacity: $opacity-txt-down;
+  }
+
   &--active {
     cursor: auto;
   }
@@ -52,7 +60,6 @@
   &::after {
     content: "";
     position: absolute;
-    // top: 0; Почему полоса посередине?
     left: 0;
     width: 24px;
     height: 2px;
@@ -96,7 +103,6 @@
   .header__logo-wrapper {
     padding: 0;
     width: auto;
-    min-height: 65px;
 
     border-bottom: 0;
   }
@@ -104,6 +110,7 @@
   .header__logo {
     width: 173px;
     height: 58px;
+    margin-top: -17px;
   }
 
   .header__toggle {
