--- a/source/sass/blocks/cover.scss
+++ b/source/sass/blocks/cover.scss
@@ -129,14 +129,14 @@
       z-index: -10;
 
       background: right rgba(99, 167, 58, 1) url("../img/index-background-desktop@1x.jpg") no-repeat;
-      background-size: 100% auto;
+      background-size: cover;
     }
   }
 
   @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
     .cover::before {
       background: top rgba(99, 167, 58, 1) url("../img/index-background-desktop@2x.jpg") no-repeat;
-      background-size: 100% auto;
+      background-size: cover;
     }
   }
 
