--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -33,8 +33,8 @@
   font-weight: normal;
   text-transform: uppercase;
 
-  --left: 2px;
-  --bottom: 2px;
+  // --left: 2px;
+  // --bottom: 2px;
 
   &::before {
     content: "";
@@ -43,8 +43,10 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    left: var(--left);
-    bottom: var(--bottom);
+    // left: var(--left);
+    // bottom: var(--bottom);
+    left: 2px;
+    bottom: 2px;
     vertical-align: middle;
     background: $button-color no-repeat;
     background-size: 50px auto;
@@ -56,8 +58,10 @@
     display: inline-block;
     width: 50px;
     height: 49px;
-    left: calc(var(--left));
-    bottom: calc(var(--bottom) + 4px);
+    // left: calc(var(--left));
+    // bottom: calc(var(--bottom) + 4px);
+    left: 2px;
+    bottom: calc(2px + 4px);
     vertical-align: middle;
     background: url("../img/icon-cat-slim.svg") no-repeat;
     background-size: 50px 49px;
@@ -69,8 +73,10 @@
     display: inline-block;
     width: 67px;
     height: 50px;
-    left: calc(var(--left) - 9px);
-    bottom: calc(var(--bottom) + 1px);
+    // left: calc(var(--left) - 9px);
+    // bottom: calc(var(--bottom) + 1px);
+    left: calc(2px - 9px);
+    bottom: calc(2px + 1px);
     vertical-align: middle;
     background: url("../img/icon-cat-pro.svg") no-repeat;
     background-size: 67px 50px;
@@ -147,8 +153,8 @@
     font-size: 36px;
     line-height: 37px;
 
-    --right: 8px;
-    --top: 15px;
+    // --right: 8px;
+    // --top: 15px;
 
     &::before {
       content: "";
@@ -156,16 +162,20 @@
       height: 200px;
       border-radius: 50%;
       left: auto;
-      right: var(--right);
-      top: var(--top);
+      // right: var(--right);
+      // top: var(--top);
+      right: 8px;
+      top: 15px;
     }
 
     &--slim::after {
       width: 200px;
       height: 200px;
       left: auto;
-      right: calc(var(--right));
-      top: calc(var(--top) - 10px);
+      // right: calc(var(--right));
+      // top: calc(var(--top) - 10px);
+      right: 8px;
+      top: calc(15px - 10px);
 
       background-size: 200px 193px;
     }
@@ -174,9 +184,10 @@
       width: 268px;
       height: 200px;
       left: auto;
-      right: calc(var(--right) - 32px);
-      // top: calc(var(--top) - 0px);
-      top: var(--top);
+      // right: calc(var(--right) - 32px);
+      // top: var(--top);
+      right: calc(8px - 32px);
+      top: 15px;
 
       background-size: 268px 200px;
     }
@@ -246,9 +257,9 @@
     font-size: 36px;
     line-height: 37px;
 
-    --top: -29px;
+    // --top: -29px;
     /* stylelint-disable */
-    --left: 0px;
+    // --left: 0px;
     /* stylelint-enable */
 
     &::before {
@@ -257,16 +268,20 @@
       height: 100px;
       border-radius: 50%;
 
-      left: var(--left);
-      top: var(--top);
+      // left: var(--left);
+      // top: var(--top);
+      left: 0;
+      top: -29px;
     }
 
     &--slim::after {
       width: 100px;
       height: 100px;
 
-      left: calc(var(--left) - 1px);
-      top: calc(var(--top) - 6px);
+      // left: calc(var(--left) - 1px);
+      // top: calc(var(--top) - 6px);
+      left: -1px;
+      top: calc(-29px - 6px);
 
       background-size: 100px 97px;
     }
@@ -274,8 +289,10 @@
     &--pro::after {
       width: 134px;
       height: 100px;
-      left: calc(var(--left) - 19px);
-      top: calc(var(--top) - 1px);
+      // left: calc(var(--left) - 19px);
+      // top: calc(var(--top) - 1px);
+      left: -19px;
+      top: calc(-29px - 1px);
 
       background-size: 134px 100px;
     }
