--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -1,3 +1,15 @@
+body {
+  min-width: 320px;
+  margin: 0;
+
+  font: 100% $font-stack;
+  color: $primary-color;
+}
+
+a {
+  text-decoration: none;
+}
+
 .visually-hidden {
   position: absolute;
   clip: rect(0 0 0 0);
