Завершение макетов (кроме красной части)

--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -97,6 +97,7 @@
 .faq__description {
   margin: 0;
   padding: 0;
+  width: 100%;
 }
 
 @media (max-width: 767px), (min-width: 1058px) and (max-width: $desktop-width) {
