--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -3,10 +3,13 @@
   justify-content: space-between;
   align-items: center;
 
-  min-height: 78px;
+  box-sizing: border-box;
+  // min-height: 78px;
+  padding: 22px 0;
 }
 
 .copyright__link-txt {
+  display: inline-block;
   font-family: "Arial", sans-serif;
   font-size: 16px;
   line-height: 16px;
