--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,3 +17,5 @@
 @import "blocks/copyright.scss";
 @import "blocks/title.scss";
 @import "blocks/catalog.scss";
+@import "blocks/products.scss";
+@import "blocks/bonus.scss";
