--- a/source/sass/blocks/address.scss
+++ b/source/sass/blocks/address.scss
@@ -4,7 +4,11 @@
   // flex-wrap: wrap;
   // align-items: center;
 
-  margin-top: 25px;
+  padding-top: 25px;
+
+  &--notindex {
+    background-color: $block-backgr-color;
+  }
 }
 
 .address__container {
@@ -69,7 +73,7 @@
 
 @media (min-width: $tablet-width) {
   .address {
-    margin-top: 62px;
+    padding-top: 62px;
   }
 
   .address__title {
@@ -111,7 +115,7 @@
   .address {
     position: relative;
 
-    margin-top: 0;
+    padding-top: 0;
   }
 
   .address__container {
