--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -16,18 +16,18 @@
   border-bottom: 1px solid #e6e6e6;
 }
 
-.site-lis__link {
+.site-list__link {
   display: block;
   padding: 22.5px 0;
   margin: 0 20px;
   color: $primary-color;
   cursor: pointer;
 
-  &:hover:not(.site-lis__link--active) {
+  &:hover:not(.site-list__link--active) {
     opacity: $opacity-txt-hover;
   }
 
-  &:active:not(.site-lis__link--active) {
+  &:active:not(.site-list__link--active) {
     opacity: $opacity-txt-down;
   }
 
@@ -56,7 +56,7 @@
     }
   }
 
-  .site-lis__link {
+  .site-list__link {
     padding: 8px 0;
     padding-top: 12px;
     margin: 0;
@@ -76,11 +76,11 @@
     margin: 0 17px;
   }
 
-  .site-lis__link {
+  .site-list__link {
     padding-bottom: 9px;
   }
 
-  .site-list--index .site-lis__link {
+  .site-list--index .site-list__link {
     color: $txt-color-alt;
 
     &--active {
