--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -9,6 +9,7 @@ $opacity-txt-down: 0.3;
 $block-backgr-color: #f2f2f2;
 $border: #d9d9d9;
 $icon-social-color: #666666;
+$border-color: #cdcdcd;
 $mobile-width: 320px;
 $tablet-width: 768px;
 $desktop-width: 1300px;
