Доделал catalog, начал form

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -12,6 +12,7 @@
   text-transform: uppercase;
   text-align: center;
   color: $txt-color-alt;
+  border: none;
 
   &:hover {
     background-color: $button-color-hover;
