--- a/source/sass/blocks/address.scss
+++ b/source/sass/blocks/address.scss
@@ -4,7 +4,8 @@
   // flex-wrap: wrap;
   // align-items: center;
 
-  padding-top: 25px;
+  // padding-top: 25px;
+  padding-top: 28px;
 
   &--notindex {
     background-color: $block-backgr-color;
