--- a/source/sass/blocks/bonus.scss
+++ b/source/sass/blocks/bonus.scss
@@ -2,11 +2,100 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
+  min-height: 289px;
   margin: 39px 20px;
+  margin-bottom: 35px;
 
-  background: $button-color url("../img/gift-photo-mobile@1x.jpg") no-repeat;
-  background-size: 100% 100%;
+  background: top $button-color url("../img/gift-photo-mobile@1x.jpg") no-repeat;
+  background-size: 100% auto;
   background-color: $button-color;
 }
 
+@media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+  .bonus {
+    background: top $button-color url("../img/gift-photo-mobile@2x.jpg") no-repeat;
+    background-size: 100% auto;
+  }
+}
 
+.bonus__svg {
+  margin-top: 40px;
+
+  fill: white;
+}
+
+.bonus__txt {
+  width: 190px;
+  margin-bottom: 20px;
+
+  color: white;
+  font-family: "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+}
+
+@media (min-width: $tablet-width) {
+  .bonus {
+    flex-direction: row;
+    flex-wrap: wrap;
+    min-height: 200px;
+    margin: 70px 30px;
+    margin-bottom: 76px;
+
+    background: top $button-color url("../img/gift-photo-tablet@1x.jpg") no-repeat;
+    background-size: 100% auto;
+  }
+
+  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    .bonus {
+      background: top $button-color url("../img/gift-photo-tablet@2x.jpg") no-repeat;
+      background-size: 100% auto;
+    }
+  }
+
+  .bonus__svg {
+    margin-top: 0;
+    margin-bottom: 10px;
+    margin-right: 95px;
+  }
+
+  .bonus__txt {
+    margin: 10px 0;
+    margin-right: 5px;
+
+    text-align: left;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .bonus {
+    flex-direction: column;
+    width: 245px;
+    margin: 0 40px;
+
+    background: top $button-color url("../img/gift-photo-desktop@1x.jpg") no-repeat;
+    background-size: auto 100%;
+  }
+
+  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    .bonus {
+      background: top $button-color url("../img/gift-photo-desktop@2x.jpg") no-repeat;
+      background-size: auto 100%;
+    }
+  }
+
+  .bonus__svg {
+    margin: 0;
+    margin-top: 38px;
+    margin-bottom: 10px;
+  }
+
+  .bonus__txt {
+    margin: 0;
+    margin-bottom: 15px;
+
+    text-align: center;
+  }
+}
