--- a/source/sass/blocks/profile.scss
+++ b/source/sass/blocks/profile.scss
@@ -1,13 +1,15 @@
 .profile {
   display: flex;
   flex-direction: column;
-//  background-color: red;
 
-  // font-size: 16px;
-  // line-height: 18px;
-  // font-weight: normal;
-  // text-transform: uppercase;
   overflow-x: hidden;
+}
+
+.profile__form {
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: normal;
+  text-transform: uppercase;
 }
 
 .profile__text {
@@ -18,7 +20,6 @@
 
   font-size: 14px;
   line-height: 18px;
-  font-weight: normal;
   text-transform: uppercase;
 }
 
@@ -28,12 +29,6 @@
   padding: 0 20px;
 
   border: none;
-
-  &--pet {
-    // margin: 0;
-    // margin-bottom: 10px;
-    // padding-bottom: 11px;
-  }
 
   &--program {
     margin-bottom: 28px;
@@ -46,9 +41,18 @@
   &--contacts {
     margin-bottom: 28px;
   }
+
+  &--comment {
+    margin-bottom: 26px;
+  }
+
+  &--other {
+    margin-bottom: 30px;
+  }
 }
 
 .profile__field {
+  position: relative;
   display: flex;
   align-items: center;
 
@@ -62,12 +66,6 @@
 
 .profile__name {
   margin-right: 15px;
-  // margin-bottom: 2px;
-
-  font-size: 16px;
-  line-height: 18px;
-  font-weight: normal;
-  text-transform: uppercase;
 }
 
 .profile__data {
@@ -75,13 +73,20 @@
 
   padding: 12px 15px 13px;
 
-  font-size: 16px;
-  line-height: 18px;
-  font-weight: normal;
   text-transform: uppercase;
   color: $txt-color-arial;
 
   border: 1px solid #e6e6e6;
+}
+
+.profile__set--contacts .profile__data {
+  padding-right: 45px;
+}
+
+.profile__svg {
+  position: absolute;
+  top: 28%;
+  right: 13px;
 }
 
 .profile__radio, .profile__checkbox {
@@ -91,14 +96,9 @@
 .profile__type {
   position: relative;
   display: block;
-  // margin: 2px 0 25px;
   padding: 12px 0 13px;
   padding-left: 45px;
 
-  font-size: 16px;
-  line-height: 18px;
-  font-weight: normal;
-  text-transform: uppercase;
 
   &::before {
     position: absolute;
@@ -121,6 +121,7 @@
   &::after {
     position: absolute;
     content: "";
+    display: none;
 
     top: 50%;
     left: 0;
@@ -138,20 +139,19 @@
   }
 
   &--checkbox {
-    padding-top: 4px;
-    padding-bottom: 20px;
-    // padding: 10px 0 15px;
+    padding-top: 12px;
+    padding-bottom: 12px;
   }
 
   &--checkbox::before {
-    margin-top: -22px;
+    margin-top: -14px;
   }
 
   &--checkbox::after {
     width: 20px;
     height: 10px;
     left: -4px;
-    margin-top: -17px;
+    margin-top: -9px;
 
     transform: rotate(-45deg);
 
@@ -160,21 +160,23 @@
     border-left: 2px solid $button-color;
     border-bottom: 2px solid $button-color;
   }
+}
 
+.profile__set input[type="radio"]:checked + label::after,
+.profile__set input[type="checkbox"]:checked + label::after {
+  display: block;
 }
 
 .profile__subtitle {
   position: relative;
   display: inline-block;
-  // width: auto;
-  // margin: 29px 0;
   margin-bottom: 35px;
-  // padding: 0 20px;
   padding-right: 20px;
 
   font-size: 24px;
   line-height: 24px;
   font-weight: normal;
+  text-transform: none;
 
   background: white;
 
@@ -185,13 +187,16 @@
     display: block;
     top: 14px;
     width: 100vw;
-    // left: -20px;
     height: 3px;
 
     background: $button-color;
 
     z-index: -10;
   }
+}
+
+.profile__subtitle--other {
+  margin-bottom: 27px;
 }
 
 @media (min-width: 351px) {
@@ -209,10 +214,6 @@
 
   overflow: auto;
 
-
-  font-size: 16px;
-  line-height: 18px;
-  font-weight: normal;
   text-transform: uppercase;
   color: $txt-color-arial;
 
@@ -220,9 +221,8 @@
 }
 
 .profile__btn {
-  // display: inline-block;
   width: calc(100% - 40px);
-  margin: -2px 20px 21px;
+  margin: 0 20px 21px;
 }
 
 .profile__note {
@@ -233,8 +233,239 @@
   font-family: "Arial", sans-serif;
   font-size: 14px;
   line-height: 16px;
-  font-weight: normal;
-  // text-transform: none;
+  text-transform: none;
   text-align: center;
   color: $txt-color-arial;
+}
+
+@media (min-width: $tablet-width) {
+  .profile__form {
+    display: flex;
+    flex-wrap: wrap;
+
+    padding-bottom: 72px;
+
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .profile__text {
+    width: 350px;
+    margin-bottom: 56px;
+    padding: 10px 70px;
+
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  .profile__set {
+    box-sizing: border-box;
+    width: 100%;
+    margin-bottom: 73px;
+    padding: 0 70px;
+
+    &--program {
+      margin-left: 70px;
+      margin-right: 70px;
+      margin-bottom: 75px;
+      padding: 17px 27px;
+
+      border: 1px solid #ededed;
+    }
+
+    &--contacts {
+      margin-bottom: 67px;
+    }
+
+    &--comment {
+      margin-bottom: 63px;
+    }
+
+    &--other {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      margin-bottom: 29px;
+    }
+  }
+
+  .profile__field {
+    width: 100%;
+    margin-bottom: 21px;
+  }
+
+  .profile__data {
+    padding: 13px 15px 13px;
+  }
+
+  .profile__svg {
+    right: 17px;
+  }
+
+  .profile__type {
+    padding: 16px 0 17px 60px;
+
+    &::before {
+      width: 38px;
+      height: 38px;
+      margin-top: -20px;
+    }
+
+    &::after {
+      width: 18px;
+      height: 18px;
+      margin-top: -9px;
+      margin-left: 11px;
+    }
+
+    &--checkbox {
+      flex-basis: 40%;
+      flex-grow: 1;
+      box-sizing: border-box;
+      margin-bottom: 19px;
+    }
+
+    &--checkbox:nth-of-type(odd) {
+      margin-right: 60px;
+    }
+
+    &--checkbox::after {
+      height: 10px;
+      left: -1px;
+      margin-top: -10px;
+    }
+  }
+
+  .profile__set-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 100%;
+    margin: 0;
+  }
+
+  .profile__subtitle {
+    margin-bottom: 76px;
+    margin-left: -40px;
+    padding: 0 40px;
+
+    font-size: 36px;
+    line-height: 36px;
+
+    &::before {
+      top: 23px;
+      left: -30px;
+    }
+
+    &--other {
+      margin-bottom: 51px;
+    }
+  }
+
+  .profile__comment {
+    height: 174px;
+    padding: 13px 17px;
+  }
+
+  .profile__btn {
+    flex-basis: 30%;
+    flex-grow: 1;
+    min-height: 52px;
+    margin: 0 30px 0 70px;
+
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .profile__note {
+    flex-basis: 30%;
+    flex-grow: 1;
+
+    margin: 0 70px 0 30px;
+
+    font-size: 16px;
+    text-align: start;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .profile__form {
+    justify-content: space-between;
+    width: 1300px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 81px;
+  }
+
+  .profile__text {
+    margin-left: calc((100vw - 1300px) / 2);
+    padding: 10px 40px;
+  }
+
+  .profile__set {
+    margin-bottom: 70px;
+    padding: 0 40px;
+
+    &--pet {
+      width: 650px;
+    }
+
+    &--program {
+      width: 570px;
+      margin-left: 40px;
+      margin-right: 40px;
+      padding: 17px 27px;
+    }
+
+    &--contacts {
+      display: flex;
+      flex-wrap: wrap;
+      margin-bottom: 67px;
+    }
+
+    &--comment {
+      margin-bottom: 66px;
+    }
+
+    &--other {
+      margin-bottom: 36px;
+    }
+  }
+
+  .profile__field {
+    width: 570px;
+    margin-bottom: 21px;
+  }
+
+  .profile__svg {
+    right: 19px;
+  }
+
+  .profile__set-wrapper .profile__field {
+    margin-bottom: 0;
+  }
+
+  .profile__type {
+
+    &--checkbox {
+      flex-basis: auto;
+      flex-grow: 0;
+      width: 245px;
+    }
+
+    &--checkbox:nth-of-type(odd) {
+      margin-right:0;
+    }
+  }
+
+  .profile__subtitle {
+    &::before {
+      left: calc(1300px / 2 - 50vw);
+    }
+  }
+
+  .profile__btn,
+  .profile__note {
+    margin: 0 40px;
+  }
 }
